# future-in-action-fightClub

./: LICENSE  README.md  notes.md
backend/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: agent.py  geocode.py  graph.py  labels.py  llm.py  llm_openai.py  map_ops.py  pipeline.py  search_tools.py  state.py  utils.py
backend/app/db/: client.py
backend/app/domain/: categories.py  dossier.py  map_modes.py  models.py
backend/app/ingestion/: features.py  overpass.py
backend/app/rag/: chunking.py  embeddings.py  retriever.py
backend/app/research/: dossier.py  opendata.py  websearch.py
backend/app/schemas/: chat.py  citations.py  geo.py  solutions.py
backend/app/services/: citation_service.py  digest_service.py  geo_service.py
backend/data/: docs_urls.txt  news_urls.txt
backend/ingestion/: run.py
backend/ingestion/common/: api_scraper.py  base_source.py  classify.py  geo.py  http.py  loader.py  overpass.py
backend/ingestion/solutions/: README.md
backend/ingestion/sources/: cameras.py  citybudget.py  news.py  osm.py  (+4 more)
backend/scripts/: build_map_layers.py  embed_solutions.py  generate_digests.py  load_seed.py  seed_demo_cases.py  seed_raions.py  translate_solutions.py
backend/seed/: solutions.json
backend/tests/: test_agent_routing.py  test_api.py  test_build_map_layers.py  test_chat_stream.py  test_citations.py  test_cities_api.py  test_dossier.py  test_geocode.py  test_health.py  test_labels.py  test_map_features.py  test_map_layers_api.py  test_map_ops.py  test_matching.py  test_rag.py  test_retriever.py  test_scrapers.py
(+112 files in other folders)
