[project]
name = "zhytomyr-adviser-backend"
version = "0.1.0"
description = "City data collection & analysis adviser for Zhytomyr — FastAPI + LangGraph + Supabase"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "supabase>=2.7",
    "langgraph>=0.2.60",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-text-splitters>=0.3",
    "openai>=1.50",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "trafilatura>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
